# rusty-magisk

./: Cargo.toml  Dockerfile  README.md  vendorsetup.sh
.cargo/: config.toml
.github/workflows/: create-changelog.yml  create-release.yml  main.yml  release-please.yml
android-ramdisk/: init.superuser.rc
src/: magiskinit  magiskinit64  main.rs  selinux.rs  utils.rs
src/asset/: chmod  magisk  magisk.apk  magisk64  mount
src/config/: magisk  su  su_minimal
